# tolmac

./: LICENSE  README.md  pyproject.toml
tolmac/: __init__.py
